# Defensive-Block-Classifier

./: LICENSE  README.md  pyproject.toml
defensive_block/: __init__.py  aggregation.py  classification.py  config.py  data.py  metrics.py  pipeline.py  preprocessing.py  smoothing.py  types.py  visualize.py
defensive_block/io/: __init__.py  base.py  metrica.py
docs/: defensive_block_detection.md
examples/: metrica_demo.ipynb
tests/: conftest.py  test_classification.py  test_metrica_loader.py  test_metrics.py  test_preprocessing.py
